Thu Nov  5 13:03:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def (token_ops): gather associations between IDs,
	  operators, and parser tokens.

Thu Nov  5 10:17:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (make_addrinfo): use RARRAY_ASET for
	  write-barrier.

	* ext/tk/tcltklib.c ({call,eval,invoke}_queue_handler): ditto.

	* ext/tk/tkutil/tkutil.c (ary2list, ary2list2): ditto.

Thu Nov  5 10:09:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/**/*.c: prefer RARRAY_AREF to indexing RARRAY_CONST_PTR.
	  pointed out by hanmac.
	  https://github.com/ruby/ruby/commit/3553a86#commitcomment-14187670

Wed Nov  4 17:33:24 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/debug.rb: Add documentation for #thread_list_all.
	  [Misc #11580][ci skip]

Wed Nov  4 15:45:59 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* class.c: fix documentation for rb_define_class{_id}_under.
	  [fix GH-991][ci skip] Patch by @kachick

Wed Nov  4 15:40:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* method.h: fix typo. Patch by @davydovanton
	  [fix GH-1076][ci skip]

Wed Nov  4 15:39:32 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* hash.c: use correct grammer. Patch by @tveastman
	  [fix GH-1079][ci skip]

Wed Nov  4 11:38:23 2015  Jake Worth  <jakeworth82@gmail.com>

	* process.c (proc_getsid): [DOC] Fix double word 'for' and typo.
	  [Fix GH-1080]

Wed Nov  4 06:01:52 2015  Eric Wong  <e@80x24.org>

	* include/ruby/ruby.h (struct RObject): hide iv_index_tbl type
	  [ruby-core:71306] [Feature #11647]

Tue Nov  3 06:48:58 2015  Eric Wong  <e@80x24.org>

	* variable.c (find_class_path): remove cast for rb_class_ivar_set
	  (rb_ivar_set): ditto
	  (rb_cvar_set): ditto

Tue Nov  3 06:18:21 2015  Eric Wong  <e@80x24.org>

	* variable.c (rb_global_tbl): convert to id_table

Tue Nov  3 01:58:46 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* parse.y (NO_QCALL): fix type mismatch of operands that causes